--- a/EndlessRecyclerView/build.gradle
+++ b/EndlessRecyclerView/build.gradle
@@ -35,5 +35,6 @@ dependencies {
 
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.github.spriteololo:ObservableCollections:0.1.1'
 
 }
